--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,3 +38,24 @@
 
    .has-events {}
 }
+
+body, html {
+  font-size: 16px;
+}
+
+.logo {
+  max-height: 60px;
+  padding: 0;
+}
+
+.brand-name{
+  margin-top: 12px;
+  /*text-transform: uppercase;*/
+  font-size: 2em;
+  font-weight: bold;
+  color: #495ba2;
+}
+
+.nav, .navbar-default, .container-fluid {
+  background-color: 	#efefef;
+}
