--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,53 +1,80 @@
-
-<% if @tasks.any? %>
-  <% @tasks.each do |task| %>
-    <h2><%= task.description %></h2>
-    <h2>
-       <% if task.priority=='1'%>
-         <%= 'Not that urgent' %>
-         <% elsif task.priority=='2'%>
-         <%= 'Quite urgent' %>
-         <% else %>
-         <%= 'Super urgent' %>
-       <% end %>
-    </h2>
-    <h2> <%= task.status %> </h2>
-    <%= form_for [task] do |r| %>
-      <%= r.submit 'Change status' %>
-    <% end %>
-
-    <%= form_tag(controller: "tasks", action: "calendar", method: "post") do%>
-      <%= hidden_field_tag 't_id', task.id %>
-      <%= submit_tag 'Add to calendar', data: {id: "#{task.id}"} %>
-    <% end %>
-
-      <% if task.user == current_user %>
-        <%= link_to image_tag("trash.png", class: "trash"), task_path(task), method: :delete, class: 'remove' %>
-      <% end %>
-
-    <% if task.comments.any?  %>
-      <% task.comments.all.each do |comment| %>
-        <h2><%= comment.comments %></h2>
-      <% end %>
-    <% end %>
-
-      <%= form_for [task, task.comments.new] do |t| %>
-        <%= t.label :comment %>
-        <%= t.text_field :comments %>
-        <%= t.submit 'Add comment' %>
-      <% end %>
-    <% end %>
-<% else %>
-  <h1>No tasks were created yet</h1>
+<%= form_for Task.new do |f| %>
+ <%= f.label :description  %>
+ <%= f.text_field :description %>
+ <%= f.label :priority  %>
+ <%= f.select :priority, (1..3) %>
+ <%= f.submit 'Add task'%>
 <% end %>
-
-
-  <%= form_for Task.new do |f| %>
-   <%= f.label :description  %>
-   <%= f.text_field :description %>
-   <%= f.label :priority  %>
-   <%= f.select :priority, (1..3) %>
-   <%= f.submit 'Add task'%>
-<% end %>
-
 <%= link_to 'Calendar', calendar_url %>
+
+<div class="container">
+  <div class="row">
+    <% if @tasks.any? %>
+      <% @tasks.each do |task| %>
+        <div class="card-deck">
+          <div class="card">
+            <div class="front">
+              <div class="cover">
+                <img src="https://www.clipartsgram.com/image/129556292-kyz84k3.jpg"/>
+              </div>
+              <div class="user">
+                  <img class="img-circle" src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg"/>
+              </div>
+              <div class="content">
+                <div class="main">
+                  <h3 class="name"><%= task.user.email.split("@")[0]%></h3>
+                  <p class="profession"><%= task.description %></p>
+                  <p class="text-center">
+                    <% if task.priority=='1'%>
+                      <%= 'Not that urgent' %>
+                    <% elsif task.priority=='2'%>
+                      <%= 'Quite urgent' %>
+                    <% else %>
+                      <%= 'Super urgent' %>
+                    <% end %></p>
+                  <p><%= task.status %></p>
+                </div>
+                <div class="footer">
+                  <i class="fa fa-mail-forward"></i> See Comments
+                </div>
+               </div> <!-- This closes content -->
+            </div> <!-- This closes front -->
+            <div class="back">
+              <div class="header">
+                <h5 class="motto">"Comments"</h5>
+              </div>
+              <% if task.comments.any?  %>
+                <% task.comments.all.each do |comment| %>
+                <div class="content">
+                    <div class="main">
+                        <h4 class="text-center"><%= comment.comments %></h4>
+                        <% end %>
+                      <% end %>
+                      <div class="stats-container">
+                        <%= form_for [task, task.comments.new] do |t| %>
+                          <%= t.label :comment %>
+                          <%= t.text_field :comments %>
+                          <%= t.submit 'Add comment' %>
+                        <% end %>
+                        <%= form_for [task] do |r| %>
+                          <%= r.submit 'Change status' %>
+                        <% end %>
+                        <%= form_tag(controller: "tasks", action: "calendar", method: "post") do%>
+                          <%= hidden_field_tag 't_id', task.id %>
+                          <%= submit_tag 'Add to calendar', data: {id: "#{task.id}"} %>
+                        <% end %>
+                        <% if task.user == current_user %>
+                          <%= link_to image_tag("trash.png", class: "trash"), task_path(task), method: :delete, class: 'remove' %>
+                        <% end %>
+                      </div> <!-- This closes stats container -->
+                    </div> <!-- This closes main -->
+                </div>  <!-- This closes content -->
+            </div> <!-- This closes back -->
+          </div> <!-- This closes card -->
+    </div> <!-- This closes card deck -->
+    <% end %> <!-- This closes iterator -->
+  <% else %>
+    <h1>No tasks were created yet</h1>
+  <% end %> <!-- This closes if statement -->
+  </div> <!-- This closes row -->
+</div> <!-- This closes container -->
