--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,45 @@
  *= require_self
  *= require simple_calendar
  */
+ .notice{
+   font-family: 'Cabin Sketch', cursive;
+    text-align: center;
+    color: red;
+    font-size: 40px;
+ }
+
+ .alert{
+   font-family: 'Cabin Sketch', cursive;
+   text-align: center;
+   color: red;
+   font-size: 40px;
+
+ }
+.task_form_title{
+  color: #495ba2;
+
+}
+ .task_form{
+   font-family: 'Cabin Sketch', cursive;
+   text-align: center;
+   background-color: #efefef;
+   /*background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2859%29.jpg");*/
+   border-radius:4px;
+   width: 400px;
+   -webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+-moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+ }
+
+.form_description_box{
+  border-radius:4px;
+
+}
+
+
+ .button {
+    border-radius:4px;
+ }
 .trash {
   width: 50px;
   height: 50px;
@@ -49,15 +88,17 @@ body, html {
 .logo {
   max-height: 60px;
   padding: 0;
+  width: 60px;
+  height: 60px;
 }
 
 .brand-name{
-  margin-top: 12px;
+  margin-top: 11px;
   /*text-transform: uppercase;*/
-  font-size: 2em;
+  font-size: 40px;
   font-weight: bold;
   color: #495ba2;
-  font-family: 'Amiko', sans-serif;
+  font-family: 'Cabin Sketch', cursive;
 }
 
 .nav, .navbar-default, .container-fluid {
@@ -123,6 +164,7 @@ body, html {
 }
 /* back, initially hidden pane */
 .back {
+  background-color: #efefef;
         -webkit-transform: rotateY( 180deg );
    -moz-transform: rotateY( 180deg );
      -o-transform: rotateY( 180deg );
@@ -172,39 +214,69 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 .card .content{
     background-color: rgba(0, 0, 0, 0);
     box-shadow: none;
-    padding: 10px 20px 20px;
+    /*padding: 10px 20px 20px;*/
+
+    font-family: 'Cabin Sketch', cursive;
+
 }
 .card .content .main {
+  text-align: center;
     min-height: 160px;
+
 }
 .card .back .content .main {
+    text-align: center;
     height: 215px;
+    font-family: 'Cabin Sketch', cursive;
+
 }
 .card .name {
-        font-family: 'Arima Madurai', cursive;
-    font-size: 22px;
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 20px;
     line-height: 28px;
     margin: 10px 0 0;
     text-align: center;
     text-transform: capitalize;
 }
 .card h5{
+  font-family: 'Cabin Sketch', cursive;
+  font-size: 20px;
+  text-align: center;
     margin: 5px 0;
     font-weight: 400;
     line-height: 20px;
 }
-.card .profession{
+
+.card .footer{
+    /*height: 105px;*/
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 15px;
+    position: absolute;
+    bottom: 0;
+    overflow: hidden;
+    border-radius: 0 0 4px 4px ;
+    width: 100%;
+    height: 10%;
     color: #999999;
     text-align: center;
+    background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2859%29.jpg");
+}
+
+
+.card .profession{
+    color: #495ba2;
+    text-align: center;
+    font-size: 40px;
     margin-bottom: 20px;
 }
-.card .footer {
+/*.card .footer {
     border-top: 1px solid #EEEEEE;
     color: #999999;
     margin: 30px 0 0;
     padding: 10px 0 0;
     text-align: center;
-}
+
+}*/
 .card .footer .social-links{
     font-size: 18px;
 }
@@ -218,17 +290,26 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
     padding: 15px 20px;
     height: 90px;
 }
-.card .motto{
-        font-family: 'Arima Madurai', cursive;
+
+.card .comments_title{
+  font-family: 'Cabin Sketch', cursive;
+  border-top: 10px;
     border-bottom: 1px solid #EEEEEE;
-    color: #999999;
-    font-size: 14px;
+    font-size: 40px;
     font-weight: 400;
     padding-bottom: 10px;
     text-align: center;
 }
+
+.comment_form{
+  font-family: 'Cabin Sketch', cursive;
+  text-align: center;
+  background-color: #efefef;
+  /*background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2859%29.jpg");*/
+  width: 400px;
+}
 .card .stats-container{
-    width: 100%;
+    /*width: 100%;*/
     margin-top: 50px;
 }
 .card .stats{
@@ -236,6 +317,9 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
     float: left;
     width: 33.333333%;
     text-align: center;
+}
+.task_action_buttons{
+  text-align: center;
 }
 .card .stats:first-child{
     border-right: 1px solid #EEEEEE;
@@ -251,8 +335,22 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 .card .stats p{
     color: #777777;
 }
+
+.comments_header{
+  margin-top: 20px;
+  height: 50px;
+
+}
+.all_comments{
+  background-color: white;
+  border-radius: 5px;
+  overflow: auto;
+  height: 140px;
+}
+
+
 /*      Just for presentation        */
-.title{
+/*.title{
     color: #506A85;
     text-align: center;
     font-weight: 300;
@@ -344,4 +442,4 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 }
 .navbar-default .navbar-brand-logo .brand{
     color: #555;
-}
+}*/
