--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -348,6 +348,10 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
   height: 140px;
 }
 
+.no_comments{
+  color: grey;
+}
+
 
 /*      Just for presentation        */
 /*.title{
