--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,11 +30,32 @@
  }
 .task_form_title{
   color: #495ba2;
-
+  font-family: 'Cabin Sketch', cursive;
+  text-align: center;
 }
+
+.login_form_title{
+  color: #495ba2;
+  font-family: 'Cabin Sketch', cursive;
+  text-align: center;
+  font-size: 60px !important;
+}
+
  .task_form{
    font-family: 'Cabin Sketch', cursive;
    text-align: center;
+   background-color: #efefef;
+   border-radius:4px;
+   width: 350px;
+   -webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+-moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+ }
+
+ .login_form{
+   font-family: 'Cabin Sketch', cursive;
+   text-align: center;
+   font-size: 20px;
    background-color: #efefef;
    border-radius:4px;
    width: 350px;
