Added screenshots to sign in page

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -34,7 +34,7 @@
         <div class="row">
 
           <% if @tasks.any? %>
-            <% @tasks.each do |task| %>
+            <% @tasks.reverse.each do |task| %>
 
           <div class="col-md-4">
             <div class="card-deck">
