--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,6 +64,18 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
  }
 
+ .sign_in_image{
+   width: 600px;
+   height:300px;
+   border-radius:4px;
+   border-color: grey;
+   -webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+-moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
+s
+
+ }
+
 .form_description_box{
   border-radius:4px;
 
