Changed nav-bar logo image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
           </button> -->
           <a href="https://github.com/laurenrosie/HabiChat">
             <ul class="nav navbar-nav navbar-left">
-              <li><img class="logo" src="/images/habichat_logo.png"></li>
-              <li class="brand-name">HabiChat</li>
+              <li><img class="logo" src="/images/HabiChatLogo.png"></li>
+              <!-- <li class="brand-name">HabiChat</li> -->
             </ul>
           </a>
         </div>
