--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
    -webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 -moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
-s
+
 
  }
 
@@ -377,10 +377,10 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
   color: grey;
 }
 
-.simple-calendar{
+/*.simple-calendar{
   font-family: 'Cabin Sketch', cursive;
 
-}
+}*/
 
 .no_tasks_yet{
   font-family: 'Cabin Sketch', cursive;
@@ -401,7 +401,6 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
   text-align: center !important;
   border-bottom-width: 5px !important;
   border-bottom-color: black !important;
-
 
 }
 
