--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,10 +1,10 @@
 <div class="simple-calendar">
   <div class="calendar-heading">
-    <!-- <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %> -->
-    <%= link_to image_tag('left_arrow.png', class: "arrow"),calendar.url_for_previous_view  %>
+    <%= link_to image_tag('left_arrow.png', :class=>"arrow"), calendar.url_for_previous_view %>
+
     <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-    <!-- <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %> -->
-    <%= link_to image_tag('right_arrow.png', class: "arrow"),calendar.url_for_next_view  %>
+    <%= link_to image_tag('right_arrow.png', :class=>"arrow"), calendar.url_for_next_view %>
+
 
   </div>
 
