--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,6 +6,7 @@
  <%= f.submit 'Add task'%>
 <% end %>
 <%= link_to 'Calendar', calendar_url %>
+<%= link_to 'Chat room', 'chats/show' %>
 
 <div class="container">
   <div class="row">
