Fixed sign up with username functionality and chat functionality.

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,2 @@
-<% @chat.messages.each do |message| %>
-  <%= message.content %>
-  </br>
-<% end %>
+<b><%= message.user.username %></b>: <%= message.content %>
+</br>
