--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <% if user_signed_in? %>
-      <h3>Welcome <%= current_user.username %>!</h3>
+      <h3>Welcome, <%= current_user.username %>!</h3>
     <% end %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
