--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -49,7 +49,7 @@
               </div>
               <div class="content">
                 <div class="main">
-                  <h3 class="name"><%= task.user.email.split("@")[0]%></h3>
+                  <h3 class="name"><%= task.user.username%></h3>
                   <p class="profession"><%= task.description %></p>
                   <p class="text-center">
 
@@ -78,7 +78,7 @@
                          <% if task.comments.any?  %>
                            <% task.comments.all.each do |comment| %>
 
-                                   <h4 class="text-center"><span class="profession"> <%= task.user.email.split("@")[0]%></span> <%= +": "+comment.comments %></h4>
+                                   <h4 class="text-center"><span class="profession"> <%= task.user.username%></span> <%= +": "+comment.comments %></h4>
                                    <% end %>
                           <% else%>
                             <span class="no_comments">No Comments Yet</span>
