--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,20 @@
 <html>
   <head>
     <title>HabiChat</title>
-    <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    'bootstrap', media: 'all', 'data-turbolinks-track': true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!-- Tasks -->
+    <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
+
+    <!-- Stylesheets -->
+    <%= stylesheet_link_tag    'bootstrap', media: 'all', 'data-turbolinks-track': true %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <!-- Javascript -->
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <!-- Google Fonts -->
+
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
   </head>
 
@@ -33,22 +41,31 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-              <% if user_signed_in? %>
-                <li> <%= link_to 'Calendar', calendar_url %></li>
-                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-              <% else %>
-                <li><%= link_to "Sign in", new_user_session_path %></li>
-                <li><%= link_to "Sign up", new_user_registration_path %></li>
-              <% end %>
+            <li><%= link_to "Home", tasks_path %></li>
+            <% if user_signed_in? %>
+              <li><%= link_to "Calendar", calendar_url %></li>
+              <li><%= link_to "Chat room", 'chats/show' %></li>
+              <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign in", new_user_session_path %></li>
+              <li><%= link_to "Sign up", new_user_registration_path %></li>
+            <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+
     <% if user_signed_in? %>
-      <h3>Welcome, <%= current_user.username %>!</h3>
+      <h1 class = "welcome">Welcome, <%= current_user.username %>!</h1>
     <% end %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
     <%= yield %>
+
   </body>
 </html>
