minor changes to calendar

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -32,7 +32,7 @@
                   <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2859%29.jpg">
                 </div>
                 <div class="user">
-                  <img class="img-circle" src="http://lorempixel.com/output/animals-q-c-480-480-<%= task.user_id %>.jpg">
+                  <img class="img-circle" src="http://lorempixel.com/output/animals-q-c-480-480-<%= task.user_id % 6 %>.jpg">
                 </div>
                 <div class="content">
                   <div class="main">
