--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,36 +1,40 @@
-<div class="simple-calendar">
-  <div class="calendar-heading">
-    <%= link_to image_tag('left_arrow.png', :class=>"arrow"), calendar.url_for_previous_view %>
+<div class = "container">
+  <div class="row">
+    <div class="simple-calendar">
+      <div class="calendar-heading">
+        <%= link_to image_tag('left_arrow.png', :class=>"arrow"), calendar.url_for_previous_view %>
 
-    <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-    <%= link_to image_tag('right_arrow.png', :class=>"arrow"), calendar.url_for_next_view %>
+        <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
+        <%= link_to image_tag('right_arrow.png', :class=>"arrow"), calendar.url_for_next_view %>
 
 
-  </div>
+      </div>
 
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <% date_range.slice(0, 7).each do |day| %>
-          <th class="table_day_header"><%= t('date.abbr_day_names')[day.wday] %></th>
-        <% end %>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% date_range.each_slice(7) do |week| %>
-        <tr>
-          <% week.each do |day| %>
-            <%= content_tag :td, class: calendar.td_classes_for(day) do %>
-              <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block) %>
-                <% capture_haml(day, sorted_events.fetch(day, []), &block) %>
-              <% else %>
-                <% block.call day, sorted_events.fetch(day, []) %>
-              <% end %>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <% date_range.slice(0, 7).each do |day| %>
+              <th class="table_day_header"><%= t('date.abbr_day_names')[day.wday] %></th>
             <% end %>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% date_range.each_slice(7) do |week| %>
+            <tr>
+              <% week.each do |day| %>
+                <%= content_tag :td, class: calendar.td_classes_for(day) do %>
+                  <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block) %>
+                    <% capture_haml(day, sorted_events.fetch(day, []), &block) %>
+                  <% else %>
+                    <% block.call day, sorted_events.fetch(day, []) %>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </tr>
           <% end %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
