--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -28,7 +28,7 @@
           <br>
 
           <div class="actions">
-            <%= f.submit "Reset password", :class=>"button" %>
+            <%= f.submit "Reset password", :class=>"btn btn-primary"  %>
           </div>
           <br>
 
