--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,11 +14,10 @@
     <div class="col-md-4">
 
       <div class="login_form">
-
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= devise_error_messages! %>
           <br>
-        
+
           <div class="field">
             <%= f.label :username %><br />
             <%= f.text_field :username %>
@@ -47,7 +46,7 @@
           <br>
 
           <div class="actions">
-            <%= f.submit "Sign up", :class=>"button" %>
+            <%= f.submit "Sign up", :class=>"btn btn-primary" %>
           </div>
         <% end %>
         <br>
