--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button> -->
-          <a href="https://github.com/laurenrosie/HabiChat">
+          <a href="/">
             <ul class="nav navbar-nav navbar-left">
               <li><img class="logo" src="/images/HabiChatLogo.png"></li>
               <!-- <li class="brand-name">HabiChat</li> -->
@@ -50,6 +50,7 @@
               <li><%= link_to "Sign in", new_user_session_path %></li>
               <li><%= link_to "Sign up", new_user_registration_path %></li>
             <% end %>
+            <li><%= link_to "About", "https://github.com/laurenrosie/HabiChat" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
