--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,11 +5,11 @@
       <div class="task_form">
         <h2> Add a Task: </h2>
         <%= form_for Task.new do |f| %>
-          <%= f.label :description  %>
+          <%= f.label :description, :class => "highlight" %>
           <br>
           <%= f.text_field :description, :class=>"form_description_box"%>
           <br>
-          <%= f.label :priority  %>
+          <%= f.label :priority, :class => "highlight" %>
           <%= f.select :priority, (1..3) %>
           <br>
           <%= f.submit 'Add task', :class => 'btn btn-primary'%>
@@ -31,11 +31,11 @@
                   <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2859%29.jpg">
                 </div>
                 <div class="user">
-                  <img class="img-circle" src="http://lorempixel.com/output/animals-q-c-480-480-<%= task.user_id % 6 %>.jpg">
+                  <img class="img-circle" src="http://lorempixel.com/output/animals-q-c-480-480-<%= task.user_id % 8 + 1 %>.jpg">
                 </div>
                 <div class="content">
                   <div class="main">
-                    <p><%= task.user.username %></p>
+                    <p class="highlight"><%= task.user.username %></p>
                     <h2><%= task.description %></h2>
                     <p>
                       <% if task.priority == 1 %>
@@ -51,7 +51,7 @@
                 </div>
                 <!-- This closes content -->
                 <div class="footer" id = "footer">
-                  <p class="btn btn-primary">See Comments</p>
+                  <p class="light-grey">See Comments</p>
                 </div>
               </div> <!-- This closes front -->
               <div class="back">
@@ -63,25 +63,29 @@
                     <div class="all_comments">
                       <% if task.comments.any?  %>
                         <% task.comments.all.each do |comment| %>
-                          <p><span class="highlight"> <%= task.user.username%></span> <%= +": "+comment.comments %></p>
+                          <p><span class="highlight"> <%= comment.user.username%></span><%= +": "+comment.comments %></p>
                         <% end %>
                       <% else%>
-                        <span class="no-comments">No Comments Yet</span>
+                        <span class="light-grey">No Comments Yet</span>
                       <% end %>
                     </div>
                     <div class="stats-container">
                       <%= form_for [task, task.comments.new] do |t| %>
                         <%= t.label :comment, :class=>"comment" %>
                         <%= t.text_field :comments, :class=>"form_description_box comment" %>
-                        <%= t.submit 'Add comment', :class=>"btn btn-primary" %>
+                        <%= t.submit 'Add comment', :class=>"btn btn-primary btn-back" %>
                       <% end %>
+                      <span style="display:inline-block; float: left;">
                       <%= form_for [task] do |r| %>
-                        <%= r.submit 'Change status', :class=>"btn btn-primary" %>
+                        <%= r.submit 'Change status', :class=>"btn btn-primary btn-left" %>
                       <% end %>
+                      </span>
+                      <span style="display:inline-block; float: right;">
                       <%= form_tag(controller: "tasks", action: "calendar", method: "post") do %>
                         <%= hidden_field_tag 't_id', task.id %>
-                        <%= submit_tag 'Add to calendar', data: {id: "#{task.id}"}, :class=>"btn btn-primary" %>
+                        <%= submit_tag 'Add to calendar', data: {id: "#{task.id}"}, :class=>"btn btn-primary btn-right" %>
                       <% end %>
+                    </span>
                       <% if task.user == current_user %>
                         <%= link_to image_tag("trash.png", class: "trash"), task_path(task), method: :delete, class: 'remove' %>
                       <% end %>
