--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,6 +12,9 @@
           <%= f.label :priority, :class => "highlight" %>
           <%= f.select :priority, (1..3) %>
           <br>
+          <%= f.label :'completion date', :class => "highlight" %>
+          <%= f.date_field(:completiondate) %>
+          <br>
           <%= f.submit 'Add task', :class => 'btn btn-primary'%>
         <% end %>
       </div>
