Updated task view to show completion date on cards

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -49,7 +49,8 @@
                         <b class="highlight"><%= 'Priority:'%></b> <%='Super urgent' %>
                       <% end %>
                     </p>
-                    <p><b class="highlight"><%= 'Status: '%></b><%= + task.status %></p>
+                    <p><b class="highlight"><%= 'Status: '%></b><%= task.status %></p>
+                    <p><b class="highlight"><%= 'Completion Date: '%></b> <%=task.completiondate %></p>
                   </div>
                 </div>
                 <!-- This closes content -->
