--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_for message, remote: true, authenticity_token: true do |f| %>
-  <%= f.label :your_message %>:
-  <%= f.text_area :content, class: "form-control", data: {textarea: "message"} %>
+  <%= f.label :your_message,  class: "highlight" %>:
+  <%= f.text_area :content, class: "form-control", data: {textarea: "message"}, :placeholder => "your message" %>
 
   <%= f.hidden_field :chat_id, value: chat.id %>
-  <%= f.submit "send", class: "btn btn-primary", data: {send: "message"} %>
+  <%= f.submit "send", class: "btn btn-primary hidden", data: {send: "message"} %>
 <% end %>
+<br>
+<br>
