--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+    <div class="background">
 
     <% if user_signed_in? %>
       <h1 class = "welcome">Welcome, <%= current_user.username %>!</h1>
