changed background of calednar to white

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -409,6 +409,11 @@
    border-bottom-color: black !important;
  }
 
+ .table-striped {
+
+   background-color: white !important;
+ }
+
  .arrow {
    width: 40px;
    height: 40px;
